# poetry-multiproject-plugin

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  mypy.ini  poetry.toml  pyproject.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
poetry_multiproject_plugin/: __init__.py  command.py  plugin.py
poetry_multiproject_plugin/commands/: project_build.py
poetry_multiproject_plugin/commands/buildproject/: __init__.py  project.py
poetry_multiproject_plugin/commands/checkproject/: __init__.py  check.py
poetry_multiproject_plugin/commands/collect/: __init__.py  project.py
poetry_multiproject_plugin/components/check/: __init__.py  mypy_checker.py
poetry_multiproject_plugin/components/parsing/: __init__.py  rewrite.py
poetry_multiproject_plugin/components/project/: __init__.py  cleanup.py  copy_proj.py  copying.py  create.py  dist.py  packages.py  prepare.py
poetry_multiproject_plugin/components/toml/: __init__.py  generate.py  packages.py  read.py
poetry_multiproject_plugin/overrides/: builders.py  factory_override.py  poetry_override.py  workspace_aware_poetry.py
poetry_multiproject_plugin/repo/: repo.py
poetry_multiproject_plugin/workspace/: namespacing.py
test/components/toml/: generate_test.py  packages_test.py  test_generate.py  test_read.py
