[tool.poetry]
name = "poetry-multiproject-plugin"
version = "1.1.3"
description = "A Poetry plugin that makes it possible to use relative package includes."
authors = ["David Vujic"]
homepage = "https://github.com/davidvujic/poetry-multiproject-plugin"
repository = "https://github.com/davidvujic/poetry-multiproject-plugin"
readme = "README.md"
packages = [{include = "poetry_multiproject_plugin"}]

[tool.poetry.plugins."poetry.application.plugin"]
poetry-multiproject-plugin = "poetry_multiproject_plugin:MultiProjectPlugin"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.2"
tomlkit = "^0.11.5"
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
