[tool.poetry]
name = "poetry-multiproject-plugin"
version = "1.5.1"
description = "A Poetry plugin that makes it possible to use relative package includes."
authors = ["David Vujic"]
license = "MIT"
homepage = "https://github.com/davidvujic/poetry-multiproject-plugin"
repository = "https://github.com/davidvujic/poetry-multiproject-plugin"
readme = "README.md"
packages = [{include = "poetry_multiproject_plugin"}]

[tool.poetry.plugins."poetry.application.plugin"]
poetry-multiproject-plugin = "poetry_multiproject_plugin:MultiProjectPlugin"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.2"
tomlkit = "0.*"
mypy = "1.*"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^8.0.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
